--- a/Task-B/index.html
+++ b/Task-B/index.html
@@ -43,7 +43,7 @@
             font-size: 0.9em;
             color: #001323;
         }
-        p.author-info{font-size: 1.2em;}
+        p.author-info{font-size: 1.2em;font-style: italic}
         p.our-paragraph{font-style: italic;}
         /* Additional style rules go here! */
     </style>
