did 1 & 2 from homework

--- a/Task-B/index.html
+++ b/Task-B/index.html
@@ -43,7 +43,9 @@
             font-size: 0.9em;
             color: #001323;
         }
-        p.author-info{font-size: 1.2em;font-style: italic}
+        p.author-info{font-size: 0.9em;font-style: italic; text-align:right}
+        p.about-this-map-title{font-size: 1.2em; color: #a7b1b9;}
+        p.data-sources-title{font-size: 1.2em; color: #a7b1b9;}
         /* Additional style rules go here! */
     </style>
 </head>
@@ -62,7 +64,11 @@
         <p>Additional information about the data and map goes here.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis urna magna, maximus nec laoreet sit amet, dictum ultricies nibh. Ut id auctor lacus. Nam a dolor et justo luctus luctus. Duis a elit eget risus dictum vehicula id eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sed enim nisl. Vestibulum commodo imperdiet lacus, sed facilisis erat placerat sit amet. Nulla consequat malesuada neque eget aliquet. Integer non convallis nisl, gravida ultrices ex. Fusce nec vestibulum elit. Sed elementum lectus ipsum, vulputate elementum ex laoreet a. Aenean eu ex varius, varius felis vitae, efficitur nulla. Quisque pretium laoreet ante, in sodales dui vehicula at. Mauris eu sem sapien.</p>
     </footer>
-
+    <footer>
+        <p class='about-this-map-title'> About This Map</p>
+    </footer>
+    <footer> <p class='data-sources-title'> Data Sources</p>
+    </footer>
     <script>
         var map;
         var targetDiv = 'map';
