--- a/task-d/index.html
+++ b/task-d/index.html
@@ -87,7 +87,11 @@
         
         // begin writing/editing Task D code here
          var cities=["Lexington", "Frankfort", "Elkton"]
-
+         var citiesLat=[38.0297, 38.200906, 36.8089]
+         var citiesLon=[-84.4947, -84.873284, -87.1564]
+         var cityCoords=[cities, citiesLat, citiesLon] 
+         var cityPops=[308428, 27453, 2172]
+         var cityCapitol=[false, true, false]
         for(/* add code here */) {
             
             var popup = "<b>"+/* add code here */+"</b><br>"
