cityCapitol popup fix

--- a/task-d/index.html
+++ b/task-d/index.html
@@ -100,7 +100,7 @@
             var popup = "<b>"+cities[i]+"</b><br>"
                             +"<b>population</b>: "+cityPops[i];
 
-            if(cityCapitol == true) {
+            if(cityCapitol[i] == true) {
                
                 popup += "<br>Capitol of the Commonwealth of Kentucky"; 
                 
