--- a/session-09/lab/index.html
+++ b/session-09/lab/index.html
@@ -130,12 +130,12 @@
 //            fillColor: "#d72b1e"  // changes the fill color
 //        });
 //        redIguanaCircle.addTo(map);
-        
+//        
 // ----------
         
-//        var redIguanaLocation = L.latLng(40.7718,-111.9124);
-//            var redIguanaCircle = L.circle(redIguanaLocation, 400);
-//            redIguanaCircle.addTo(map);
+        var redIguanaLocation = L.latLng(40.7718,-111.9124);
+            var redIguanaCircle = L.circle(redIguanaLocation, 400);
+            redIguanaCircle.addTo(map);
 //        
 //            redIguanaCircle.setStyle({
 //                color: "#d72b1e", // sets stroke color to red
