--- a/session-10/task/index.html
+++ b/session-10/task/index.html
@@ -62,16 +62,16 @@
 
 <body>
     <header>
-        <h1>Map Title</h1>
-        <h2>Map Subtitle</h2>
+        <h1>Taylor Franklin's Favorite Places</h1>
+        <h2>Lexington Edition</h2>
     </header>
 
     <div id='map'></div>
 
     <footer>
-        <p>Map authored by YOUR NAME</p>
-        <p>Additional information about the data and map goes here.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis urna magna, maximus nec laoreet sit amet, dictum ultricies nibh. Ut id auctor lacus. Nam a dolor et justo luctus luctus. Duis a elit eget risus dictum vehicula id eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sed enim nisl. Vestibulum commodo imperdiet lacus, sed facilisis erat placerat sit amet. Nulla consequat malesuada neque eget aliquet. Integer non convallis nisl, gravida ultrices ex. Fusce nec vestibulum elit. Sed elementum lectus ipsum, vulputate elementum ex laoreet a. Aenean eu ex varius, varius felis vitae, efficitur nulla. Quisque pretium laoreet ante, in sodales dui vehicula at. Mauris eu sem sapien.
+        <p>Map by: Taylor Franklin</p>
+        <p>This map depicts some fantastic places that sports and donut lovers should visit.</p>
+        <p>Keeneland racecourse is one of the nations premier racecourses and will host the Breeders Cup this fall. Rupp Arena is the home of the University of Kentucky's mens basketball team. Spalding's Bakery has the best donuts in town.
         </p>
     </footer>
 
@@ -251,7 +251,7 @@
 }
 
         var pointOptions={
-            color: "yellow"
+            color: "green"
         }
         var lineOptions={
             color: "purple"
@@ -267,7 +267,7 @@
             },
             style : function(feature){
                 return { dashArray: "5, 10",
-                        weight: 2
+                        weight: 10
                        }
             },
             onEachFeature: function(feature, layer){
