--- a/session-11/lab-solution/index.html
+++ b/session-11/lab-solution/index.html
@@ -131,7 +131,7 @@
             var radius = Math.sqrt(val/Math.PI);
             return radius * .8;   
         }        
-        
+        console.log(plants);
     </script>
     
 </body>
