--- a/final-project/index.html
+++ b/final-project/index.html
@@ -317,8 +317,8 @@
            var props = layer.feature.properties;
            var html = "<h3>"+props["name"]+" State</h3>"+
                     "Total Precentage of Beef: <b>"+ (props[currentYear]*100)+"</b><br>"+
-                    "Total Precentage of Pork: <b>"+ (props[currentYear]*100)+"</b><br>"+
-                    "Total Precentage of Poultry: <b>"+ (props[currentYear]*100)+"</b>"
+                    "Total Precentage of Pork: <b>"+ (props["pork_2000"]*100)+"</b><br>"+
+                    "Total Precentage of Poultry: <b>"+ (props["poultry_2000"]*100)+"</b>"
         $(".info").html(html);
            
     } 
